--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,6 +5,7 @@
 {% endif %}
 	<h2 class="hidden-sm-down"><a href="./" rel="home">{{ site.name }}</a></h2>
 	<nav role="navigation">
+		<img src="/assets/images/photo.jpg" height="250" width="250">
 		<label class="pure-toggle-label hidden-md-up" for="pure-toggle-left" data-toggle-label="left"><span class="pure-toggle-icon"></span></label>
 		<ul class="nav navigation">
 			<li class="hidden-md-up"><a href="./" rel="home">Home</a></li>
@@ -31,5 +32,4 @@
 			{% endfor %}
 			</ul>
 		</aside>
-		<img src="/assets/photo.jpeg" height="200" width="200">
 	</nav>
