--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,8 +4,8 @@
 	{% assign menu_token = "2" %}
 {% endif %}
 	<h2 class="hidden-sm-down"><a href="./" rel="home">{{ site.name }}</a></h2>
+	<img src="assets/images/photo.jpg" height="250" width="250" align="middle">
 	<nav role="navigation">
-		<img src="/assets/images/photo.jpg" height="250" width="250">
 		<label class="pure-toggle-label hidden-md-up" for="pure-toggle-left" data-toggle-label="left"><span class="pure-toggle-icon"></span></label>
 		<ul class="nav navigation">
 			<li class="hidden-md-up"><a href="./" rel="home">Home</a></li>
