--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		{% include head.html %}
+		{% seo %}
 		<meta name="google-site-verification" content="3xvewEFLNMZUPWmeOKNgzzauKj5PS9ZL3VHbJ6f2kRQ" />
 	</head>
 	<body>
