--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,4 @@
 	{% endfor %}
 {% endif %}
 
-<title>{{ site.name }} - {{ page.title }}</title>
+<title>{{ site.title }} - {{ page.title }}</title>
