--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,7 @@
 
 								</article>
 								<footer class="text-xs-center hidden-print">
-										<p style="text-align:center;"><img src="assets/images/IIT_logo.png" width="300"></p>
-									<small class="text-muted">Copyright {{ site.time | date: '%Y' }}, all lefts reserved. Developed by <a href="http://olevik.me/">Ole Vik</a>, hosted on GitHub pages.</small>
+										<p style="text-align:center;"><img src="assets/images/IIT_Logo.png" width="300"></p>
 								</footer>
 							</main>
 						</div>
