--- a/_includes/mobile_header.html
+++ b/_includes/mobile_header.html
@@ -1,3 +1,4 @@
-<header class="mobile_header hidden-md-up hidden-print text-xs-center">
+<!--<header class="mobile_header hidden-md-up hidden-print text-xs-center">
 	<h2><a href="/" rel="home">{{ site.name }}</a></h2>
 </header>
+-->
