--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="./{{ site.baseurl }}/assets/css/pure-drawer.css" media="screen">
-<link rel="stylesheet" href="./{{ site.baseurl }}/assets/css/main.css">
+<link rel="stylesheet" href="./assets/css/pure-drawer.css" media="screen">
+<link rel="stylesheet" href="./assets/css/main.css">
 
 <!-- Extensive Metadata -->
 {% if page.summary %}
