--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,25 +3,25 @@
 {% else %}
 	{% assign menu_token = "2" %}
 {% endif %}
-	<h2 class="hidden-sm-down"><a href="./" rel="home">{{ site.name }}</a></h2>
+	<h2 class="hidden-sm-down"><a href="/" rel="home">{{ site.name }}</a></h2>
 	<p style="text-align:center;"><img src="assets/images/photo.jpg" height="250" width="250"></p>
 	<nav role="navigation">
 		<label class="pure-toggle-label hidden-md-up" for="pure-toggle-left" data-toggle-label="left"><span class="pure-toggle-icon"></span></label>
 		<ul class="nav navigation">
-			<li class="hidden-md-up"><a href="./" rel="home">Home</a></li>
+			<li class="hidden-md-up"><a href="/" rel="home">Home</a></li>
 			{% for item in site.menu %}
 				{% if item.links %}
 					<li>
-						<a href=".{{ item.url }}">{{ item.page }}</a>
+						<a href="{{ item.url }}">{{ item.page }}</a>
 						<a href="#" id="btn-{{ menu_token }}{{ item.url | replace: '/', ''  }}" data-toggle="collapse" data-target="#submenu-{{ menu_token }}{{ item.url | replace: '/', ''  }}" aria-expanded="false"></a>
 					</li>
 					<ul class="collapse" id="submenu-{{ menu_token }}{{ item.url | replace: '/', ''  }}" role="menu" aria-labelledby="btn-{{ menu_token }}{{ item.url | replace: '/', ''  }}">
 					{% for link in item.links %}
-						<li><a href=".{{ item.url }}{{ link.url }}">{{ link.title }}</a></li>
+						<li><a href="{{ item.url }}{{ link.url }}">{{ link.title }}</a></li>
 					{% endfor %}
 					</ul>
 				{% else %}
-					<li><a href=".{{ item.url }}">{{ item.page }}</a></li>
+					<li><a href="{{ item.url }}">{{ item.page }}</a></li>
 				{% endif %}
 			{% endfor %}
 		</ul>
@@ -32,4 +32,14 @@
 			{% endfor %}
 			</ul>
 		</aside>
+		<form action="./search" method="get" class="form-inline pull-right{% if page.search_omit %} invisible{% endif %}" role="search">
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Search..." name="q">
+				<span class="input-group-btn">
+					<button class="btn btn-secondary" type="submit">
+						<i class="fa fa-search"></i>
+					</button>
+				</span>
+			</div>
+		</form>
 	</nav>
