--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,7 +8,7 @@
 	<nav role="navigation">
 		<label class="pure-toggle-label hidden-md-up" for="pure-toggle-left" data-toggle-label="left"><span class="pure-toggle-icon"></span></label>
 		<ul class="nav navigation">
-			<li class="hidden-md-up"><a href="/" rel="home">Home</a></li>
+<!--			<li class="hidden-md-up"><a href="/" rel="home">Home</a></li> -->
 			{% for item in site.menu %}
 				{% if item.links %}
 					<li>
