--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -32,4 +32,8 @@
 			{% endfor %}
 			</ul>
 		</aside>
+		<form action="./search" method="get" class="form-inline pull-right{% if page.search_omit %} invisible{% endif %}" role="search">
+		<div class="input-group">
+		</div>
+	</form>
 	</nav>
