--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
 			<nav class="pure-drawer" data-position="left">
 				<div class="col-md-3 sidebar hidden-print">
-					{% include menu.html %}
+					{% include menu.html context="mobile" %}
 				</div>
 			</nav>
 
