--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 								{% include menu.html %}
 							</div>
 							<main class="content col-md-9" role="main">
-								{% include mobile_header.html %}
+							<!--	{% include mobile_header.html %}-->
 								<article>
 									<h1>{{ page.title }}</h1>
 									{{ content }}
