--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -32,7 +32,7 @@
 			{% endfor %}
 			</ul>
 		</aside>
-		<form action="./search" method="get" class="form-inline pull-right{% if page.search_omit %} invisible{% endif %}" role="search">
+		<form action="./search" method="get" class="invisible" role="search">
 		<div class="input-group">
 			<input type="text" class="form-control" placeholder="Search..." name="q">
 			<span class="input-group-btn">
