--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -25,14 +25,8 @@
 				{% endif %}
 			{% endfor %}
 		</ul>
-		<aside class="external_links">
-			<ul class="nav">
-			{% for item in site.menu_external %}
-				<li><a href="{{ item.url }}" target="_blank">{{ item.title }}</a></li>
-			{% endfor %}
-			</ul>
-		</aside>
-		<form action="./search" method="get" class="form-inline pull-right" role="search">
+
+		<form action="./search" method="get" class="form-inline pull-right invisible" role="search">
 		<div class="input-group">
 			<input type="text" class="form-control" placeholder="Search..." name="q">
 			<span class="input-group-btn">
@@ -42,4 +36,12 @@
 			</span>
 		</div>
 	</form>
+
+	<aside class="external_links">
+		<ul class="nav">
+		{% for item in site.menu_external %}
+			<li><a href="{{ item.url }}" target="_blank">{{ item.title }}</a></li>
+		{% endfor %}
+		</ul>
+	</aside>
 	</nav>
