--- a/assets/css/pure-drawer.css
+++ b/assets/css/pure-drawer.css
@@ -197,7 +197,7 @@ body {
   -webkit-transition-timing-function: ease-out;
           transition-timing-function: ease-out;
   width: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 @media only screen and (min-width: 40.063em) {
@@ -240,7 +240,7 @@ body {
 .pure-pusher-container {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 /***********
@@ -249,7 +249,7 @@ body {
 .pure-pusher {
   position: relative;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   left: 0;
   z-index: 2;
   -webkit-transition-property: -webkit-transform;
